hotfix pitstop api